# hyphae

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml  flux.toml  rustfmt.toml
.beads/: interactions.jsonl
.github/workflows/: ci.yml  notify-docs.yml  publish.yml  release.yml
.levi/: config.toml
demo/: Cargo.toml
demo/src/: main.rs
hypha/: Cargo.toml  README.md
hypha/benches/: latency.rs
hypha/src/: async_support.rs  bounded_input.rs  bounded_output.rs  cell.rs  cell_map.rs  cell_set.rs  flat.rs  lib.rs  metrics.rs  nested_map.rs  registry.rs  server.rs  signal.rs  subscription.rs  tracing.rs  transaction.rs
hypha/src/constructors/: from_iter.rs  interval.rs  mod.rs
hypha/src/tests/: bounded_input.rs  cell.rs  concurrency.rs  constructors.rs  disposal.rs  error_handling.rs  glitch_free.rs  metrics.rs  mod.rs  subscription.rs
hypha/src/traits/: cell_value.rs  dep_node.rs  mod.rs  mutable.rs  reactive_keys.rs  reactive_map.rs  watchable.rs
hypha/src/traits/collections/: count_by.rs  distinct_map.rs  flat_map.rs  group_by.rs  index_by.rs  inner_join.rs  inner_join_on.rs  inner_join_on_by.rs  left_join.rs  left_join_map.rs  left_join_map_on.rs  left_join_map_on_by.rs  left_join_on.rs  left_join_on_by.rs  left_semi_join.rs  left_semi_join_map.rs  left_semi_join_map_on.rs  left_semi_join_map_on_by.rs  left_semi_join_on.rs  left_semi_join_on_by.rs  map_values_cell.rs  mod.rs  project.rs  project_cell.rs  project_many.rs  select.rs  select_cell.rs
hypha/src/traits/collections/internal/: diff_runtime.rs  join_runtime.rs  map_runtime.rs  map_values_cell.rs  mod.rs
hypha/src/traits/operators/: audit.rs  backpressure.rs  buffer_count.rs  buffer_time.rs  cold.rs  concat.rs  debounce.rs  deduped.rs  delay.rs  distinct.rs  distinct_until_changed_by.rs  filter.rs  finalize.rs  first.rs  join.rs  join_vec.rs  last.rs  map.rs  merge.rs  merge_map.rs  mod.rs  pairwise.rs  parallel.rs  result_ext.rs  retry.rs  sample.rs  scan.rs  skip.rs  skip_while.rs  state_transition.rs  switch_map.rs  take.rs  take_until.rs  take_while.rs  tap.rs  throttle.rs  timeout.rs  try_map.rs  window.rs  with_latest_from.rs  (+1 more)
hyphae/: Cargo.toml  README.md  moon.yml
hyphae-leptos/: Cargo.toml
hyphae-leptos/src/: lib.rs  signal.rs  store.rs
hyphae/benches/: cell_map_chains.rs  latency.rs  pipeline_chains.rs  scheduler.rs  scheduler_contention.rs  subscriber_registry.rs  view_chains.rs
hyphae/docs/: profiling.md  reactive-hot-path-redesign.md
hyphae/docs/superpowers/plans/: 2026-04-23-pipeline-type-bench-results.md
hyphae/src/: async_support.rs  bounded_input.rs  bounded_output.rs  cell.rs  cell_map.rs  cell_set.rs  clock.rs  flat.rs  lib.rs  metrics.rs  profiling.rs  registry.rs  scheduler.rs  server.rs  source.rs  subscription.rs  tracing.rs
hyphae/src/constructors/: from_iter.rs  interval.rs  mod.rs
hyphae/src/map_query/: mod.rs  reactive_map_impl.rs  share.rs
hyphae/src/pipeline/: cell_impl.rs  filter.rs  map.rs  mod.rs  result_ext.rs  share.rs  tap.rs  try_map.rs
hyphae/src/platform/: mod.rs  native.rs  wasm.rs
hyphae/src/tests/: bounded_input.rs  cell.rs  concurrency.rs  disposal.rs  error_handling.rs  map_query_integration.rs  metrics.rs  mod.rs  pipeline_integration.rs  subscription.rs
hyphae/src/traits/: cell_value.rs  dep_node.rs  foreign_key.rs  mod.rs  mutable.rs  reactive_keys.rs  reactive_map.rs  watchable.rs
hyphae/src/traits/collections/: count_by.rs  group_by.rs  inner_join.rs  left_join.rs  left_semi_join.rs  mod.rs  multi_left_join.rs  project.rs  project_cell.rs  project_many.rs  select.rs  select_cell.rs
hyphae/src/traits/collections/internal/: diff_runtime.rs  join_runtime.rs  map_runtime.rs  map_values_cell.rs  mod.rs  multi_join_runtime.rs
hyphae/src/traits/operators/: audit.rs  backpressure.rs  buffer_count.rs  buffer_time.rs  cold.rs  concat.rs  debounce.rs  deduped.rs  delay.rs  distinct.rs  distinct_until_changed_by.rs  filter.rs  finalize.rs  first.rs  join.rs  join_vec.rs  last.rs  map.rs  merge.rs  merge_map.rs  mod.rs  pairwise.rs  parallel.rs  result_ext.rs  retry.rs  sample.rs  scan.rs  skip.rs  skip_while.rs  state_transition.rs  switch_map.rs  take.rs  take_while.rs  tap.rs  throttle.rs  timeout.rs  try_map.rs  window.rs  with_latest_from.rs  zip.rs
hyphae/tests/: countall_size_retention.rs  parallelism_cellmap_joins.rs  parallelism_combiners.rs  parallelism_slicing.rs  parallelism_time_structural.rs  parallelism_transforms.rs  profiling_pass.rs  scheduler_completeness.rs  scheduler_correctness_stress.rs  scheduler_map_join_torn.rs  scheduler_no_coalesce.rs  scheduler_no_coalesce_wave_order.rs  scheduler_phase0.rs  scheduler_reentrant_wave.rs  scheduler_switch_map_leak.rs  scheduler_switch_map_stress.rs  scheduler_zip_mispair.rs  timer_reactor.rs
inspector/: Cargo.toml
inspector/src/: main.rs
rx3-lib/: Cargo.toml  README.md  REFACTORING_NOTES.md
rx3-lib/benches/: latency.rs
rx3-lib/examples/: advanced_dependencies.rs  dependency_tracking.rs
rx3-lib/src/: async_support.rs  bounded_input.rs  bounded_output.rs  cell.rs  combine.rs  flat.rs  lib.rs  metrics.rs  signal.rs  subscription.rs
rx3-lib/src/constructors/: from_iter.rs  interval.rs  mod.rs
rx3-lib/src/tests/: bounded_input.rs  cell.rs  constructors.rs  disposal.rs  metrics.rs  mod.rs  operators.rs  subscription.rs
rx3-lib/src/traits/: debounce.rs  deduped.rs  delay.rs  dep_node.rs  filter.rs  join.rs  map.rs  merge_map.rs  mod.rs  mutable.rs  pairwise.rs  parallel.rs  result_ext.rs  scan.rs  skip.rs  subscribe.rs  switch_map.rs  take.rs  tap.rs  throttle.rs  try_map.rs  watchable.rs
rx3-lib/src/traits/operators/: audit.rs  backpressure.rs  buffer_count.rs  debounce.rs  deduped.rs  delay.rs  distinct_until_changed_by.rs  filter.rs  finalize.rs  first.rs  join.rs  last.rs  map.rs  merge.rs  merge_map.rs  mod.rs  pairwise.rs  parallel.rs  result_ext.rs  sample.rs  scan.rs  skip.rs  skip_while.rs  state_transition.rs  switch_map.rs  take.rs  take_until.rs  take_while.rs  tap.rs  throttle.rs  timeout.rs  try_map.rs  window.rs  zip.rs
(+9 files in other folders)
