[workspace]
resolver = "2"
members = [
    "hyphae",
    "demo",
    "inspector",
]

[workspace.package]
version = "0.4.0"
edition = "2024"
authors = ["Trevor"]
license = "MIT OR Apache-2.0"

[workspace.lints.clippy]
disallowed_types = "deny"

[workspace.dependencies]
anyhow = "1.0.100"
arc-swap = "1.7.1"
crossterm = "0.28"
dashmap = "6.1.0"
flume = "0.11"
log = "0.4"
futures-core = "0.3"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "rt", "time", "sync", "macros"] }
uuid = { version = "1.19.0", features = ["v4"] }
