[package]
name = "demo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "demo"
path = "src/main.rs"

[dependencies]
hypha = { path = "../hypha", features = ["inspector"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
