[package]
name = "demo"
version = "0.6.2"
publish = false
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "demo"
path = "src/main.rs"

[dependencies]
hyphae = { path = "../hyphae", features = ["inspector"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
