[package]
name = "hypha"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "hypha"
path = "src/lib.rs"

[features]
default = []
async = ["flume", "futures-core"]

[dependencies]
anyhow = "1"
arc-swap.workspace = true
crossbeam = "0.8"
dashmap.workspace = true
flume = { workspace = true, optional = true }
futures-core = { workspace = true, optional = true }
uuid.workspace = true

# Native-only deps (thread pool, precise sleep)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10"
spin_sleep = "1"

# WASM: uuid needs js feature for RNG
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "latency"
harness = false
