[package]
name = "hyphae-leptos"
version = "1.3.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Bridge hyphae reactive cells and cell-maps into Leptos signals and stores"
repository = "https://github.com/ignition-is-go/hyphae"

[lints]
workspace = true

[dependencies]
# `version` is required for `cargo publish` (it strips the path and resolves
# the dependency from crates.io); the path is used for local/workspace builds.
hyphae = { path = "../hyphae", version = "1.3.4" }
# Depend on `leptos` itself (not `reactive_graph` directly — its crate version
# is independent of the Leptos release line) so the reactive types here are the
# exact ones a Leptos 0.8 app uses. No renderer feature (csr/hydrate/ssr) is
# enabled: only the reactive primitives from `leptos::prelude` are used.
leptos = { version = "0.8", default-features = false }

[package.metadata.flux]
tasks = ["fmt", "check", "check-wasm", "build", "test", "lint", "publish"]
