[package]
name = "hyphae"
version = "1.1.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Reactive cells and runtime primitives for rship"
repository = "https://github.com/ignition-is-go/hyphae"

[lints]
workspace = true

[lib]
name = "hyphae"
path = "src/lib.rs"

[features]
default = []
async = ["flume", "futures-core"]
inspector = ["serde", "serde_json", "tokio", "uuid/serde"]
metrics = []
trace = ["metrics"]
# Opt-in deferred/ordered/glitch-free propagation under an explicit `batch()`
# boundary, plus the `clock`/`TickSource` seam for frame-locked ticking. Off by
# default: the synchronous eager-push path is unchanged when this is disabled.
scheduler = []
# First-class observability for the scheduler: `#[inline(never)]` propagation
# boundaries so sampling profilers stop folding `notify`/`fanout` symbols, plus
# per-cell `tracing` spans. Builds on `trace`; consumers attach their own
# `tracing` subscriber (Tracy, `tracing-flame`, etc.).
profiling = ["trace", "dep:tracing"]

[dependencies]
anyhow = "1"
arc-swap.workspace = true
crossbeam = "0.8"
dashmap.workspace = true
log.workspace = true
parking_lot.workspace = true
rustc-hash.workspace = true
flume = { workspace = true, optional = true }
futures-core = { workspace = true, optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
# Optional: only pulled in by the `profiling` feature. hyphae emits spans; the
# consumer chooses the subscriber (`tracing-flame`, `tracing-tracy`, …).
tracing = { version = "0.1", optional = true }
uuid.workspace = true

# Native-only deps (thread pool, precise sleep, inspector TCP server).
# `tokio` is native-only: its `net` feature pulls in `mio`, which does not
# build for wasm. The inspector TCP `server` module is correspondingly gated to
# native; on wasm the inspector exposes only the in-memory `registry`.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10"
spin_sleep = "1"
tokio = { workspace = true, optional = true }

# WASM deps: uuid/getrandom need js RNG; gloo-timers (futures) + the
# wasm-bindgen-futures executor drive leak-free setTimeout-backed timers;
# web-time provides a `performance.now()`-backed `Instant`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4"
web-time = "1"

[package.metadata.flux]
tasks = ["build", "test", "lint", "publish"]

[dev-dependencies]
criterion = "0.5"
seq-macro = "0.3"

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "pipeline_chains"
harness = false

[[bench]]
name = "cell_map_chains"
harness = false

[[bench]]
name = "view_chains"
harness = false

[[bench]]
name = "subscriber_registry"
harness = false
