[package]
name = "hyphae"
version = "2.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Reactive cells and runtime primitives for rship"
repository = "https://github.com/ignition-is-go/hyphae"

[lints]
workspace = true

[lib]
name = "hyphae"
path = "src/lib.rs"

[features]
default = []
async = ["flume", "futures-core"]
# Opt-in deferred/ordered/glitch-free propagation under an explicit `batch()`
# boundary, plus the `clock`/`TickSource` seam for frame-locked ticking. Off by
# default: the synchronous eager-push path is unchanged when this is disabled.
scheduler = []
# The one observability feature: `#[inline(never)]` propagation boundaries so
# sampling profilers stop folding `notify`/`write_value`/`fanout` into one
# symbol, per-fanout `tracing` spans tagged with cell id/name, and the
# `profiling::pass` re-fire report. Zero per-cell resident overhead and no
# global census — consumers attach their own `tracing` subscriber (Tracy,
# `tracing-flame`, …), and use a heap profiler for memory attribution.
profiling = ["dep:tracing"]

[dependencies]
anyhow = "1"
arc-swap.workspace = true
crossbeam = "0.8"
dashmap.workspace = true
log.workspace = true
parking_lot.workspace = true
rustc-hash.workspace = true
flume = { workspace = true, optional = true }
futures-core = { workspace = true, optional = true }
# Optional: only pulled in by the `profiling` feature. hyphae emits spans; the
# consumer chooses the subscriber (`tracing-flame`, `tracing-tracy`, …).
tracing = { version = "0.1", optional = true }
uuid.workspace = true

# Native-only deps (thread pool, precise sleep).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10"
spin_sleep = "1"

# WASM deps: uuid/getrandom need js RNG; gloo-timers (futures) + the
# wasm-bindgen-futures executor drive leak-free setTimeout-backed timers;
# web-time provides a `performance.now()`-backed `Instant`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4"
web-time = "1"

[package.metadata.flux]
tasks = ["fmt", "check", "check-wasm", "check-wasm-features", "build", "test", "lint", "publish"]

[dev-dependencies]
criterion = "0.5"
seq-macro = "0.3"

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "pipeline_chains"
harness = false

[[bench]]
name = "cell_map_chains"
harness = false

[[bench]]
name = "view_chains"
harness = false

[[bench]]
name = "subscriber_registry"
harness = false

[[bench]]
name = "scheduler"
harness = false
required-features = ["scheduler"]

[[bench]]
name = "scheduler_contention"
harness = false
required-features = ["scheduler"]
