[package]
name = "hyphae-inspector"
version = "0.5.1"
publish = false
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "hyphae-inspector"
path = "src/main.rs"

[package.metadata.flux]
tasks = ["build", "test", "lint"]

[dependencies]
hyphae = { path = "../hyphae", features = ["inspector"] }
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
crossterm.workspace = true
flume.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
uuid = { workspace = true, features = ["serde", "v5"] }
dashmap.workspace = true
