[package]
name = "rx3"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "rx3"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
arc-swap.workspace = true
dashmap.workspace = true
rayon = "1.10"
uuid.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "latency"
harness = false
