[package]
name = "rx3"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "rx3"
path = "src/lib.rs"

[features]
default = []
async = ["flume", "futures-core"]

[dependencies]
anyhow = "1"
arc-swap.workspace = true
crossbeam = "0.8"
dashmap.workspace = true
flume = { workspace = true, optional = true }
futures-core = { workspace = true, optional = true }
rayon = "1.10"
uuid.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "latency"
harness = false
